# RAG_WEB_APP

./: README.md  rag_app.py  requirements.txt
DBT_MODELING_WITH_DUCKDB/: pyproject.toml
docs/: news.txt
lib/: utils.py
