[project]
name = "dbt-modeling-with-duckdb"
version = "0.1.0"
description = "DBT project"
authors = [
    {name = "chrisestevez",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
